--- a/src/assets/styles/forumHeroSection.css
+++ b/src/assets/styles/forumHeroSection.css
@@ -1,11 +1,11 @@
-.forumButtonContainer{
+.forumButtonContainerHero{
     display:flex;
     gap:12px;
     padding:32px 0;
     justify-content: center;
 }
 @media screen and (max-width: 62em) {
-    .forumButtonContainer{
+    .forumButtonContainerHero{
       flex-direction: column;
     }
   }
