Part 1: Fix UI of adding an image button to match the figma

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -22,6 +22,11 @@ option,
 select {
   max-width: 400px;
 }
+
+.auto-width {
+  max-width: none !important;
+}
+
 a {
   color: #ddd6fe !important;
 }
