Task 3: Add more buttons to edit how the image works: "In line", "Wrap text", "Break text".

--- a/src/components/editor/style.css
+++ b/src/components/editor/style.css
@@ -17,3 +17,17 @@
 .ProseMirror img.ProseMirror-selectednode {
   outline: 1px solid #ac5dab;
 }
+
+.inline-image {
+  display: inline;
+}
+
+.wrap-text-image {
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.break-text-image {
+  display: block;
+}
