--- a/src/components/editor/style.css
+++ b/src/components/editor/style.css
@@ -1,7 +1,34 @@
+.mention {
+  border: 1px solid #ffffff;
+  border-radius: 0.4rem;
+  box-decoration-break: clone;
+  padding: 0.1rem 0.3rem;
+}
 
-  .mention {
-    border: 1px solid #ffffff;
-    border-radius: 0.4rem;
-    box-decoration-break: clone;
-    padding: 0.1rem 0.3rem;
-  }
+.ProseMirror > * + * {
+  margin-top: 0.75em;
+}
+
+.ProseMirror img {
+  height: auto;
+  max-width: 100%;
+}
+
+.ProseMirror img.ProseMirror-selectednode {
+  outline: 1px solid #ac5dab;
+}
+
+.inline-image {
+  display: inline;
+}
+
+.wrap-text-image {
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.break-text-image {
+  display: block;
+  margin: auto;
+}
