--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -22,6 +22,11 @@ option,
 select {
   max-width: 400px;
 }
+
+.auto-width {
+  max-width: none !important;
+}
+
 a {
   color: #ddd6fe !important;
 }
@@ -30,4 +35,9 @@ a {
   bottom: 4px;
   right: 4px;
   padding: 8px;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
 }
