WIP(adjust-lists): Create list

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -12,6 +12,10 @@
   }
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 /* body {font-family: 'ManropeMedium';} */
 input,
 .mantine-PasswordInput-root,
